# Temporal-Persistence-of-Perceptual-Inference-by-Group-Doraemon-Neuromatch-CN-2026

./: .gitignore  ABSTRACT.md  README.md
perceptual_arbitration/: PROPOSAL.md  README.md  pyproject.toml  requirements.txt
perceptual_arbitration/configs/: default.yaml
perceptual_arbitration/results/: README.md
perceptual_arbitration/results/provenance/: posterior_predictive_manifest.json  posterior_predictive_sp_manifest.json  run_manifest.json
perceptual_arbitration/results/report/: chart_map.csv  delivery_receipt.json  perceptual_arbitration_results.html  source_notes.md
perceptual_arbitration/results/tables/: bootstrap_model_differences.csv  covariate_hmm_average_transition_matrix.csv  covariate_hmm_coefficients.csv  covariate_hmm_effect_intervals.csv  covariate_hmm_effects.csv  covariate_hmm_fold_effects.csv  cv_results.csv  cv_summary.csv  empirical_bayes_group_summary.csv  hmm_final_parameters.csv  hmm_final_transition_matrix.csv  model_info_criteria.csv  per_sequence_cv_results.csv  posterior_predictive_model_coverage.csv  posterior_predictive_model_metric_intervals.csv  posterior_predictive_model_run_length_calibration.csv  posterior_predictive_sp_model_coverage.csv  posterior_predictive_sp_model_metric_intervals.csv  (+4 more)
perceptual_arbitration/scripts/: export_trial_results.py  render_results.py  run_all.py  run_basic_bayesian_baselines.py  run_fast_replication.py  run_posterior_predictive_checks.py
perceptual_arbitration/tests/: test_circular.py  test_exposition.py  test_pipeline_components.py  test_posterior_predictive.py  test_trial_exports.py
(+616 files in other folders)
