[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perceptual-state-arbitration"
version = "0.1.0"
description = "Hidden Markov switching observer and baselines for human perceptual estimation."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "joblib>=1.3",
  "duckdb>=1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
